# music-fix

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml  python.yml
mocks/: mock_generate_audio_files.py
music_fix/: performer.py
src/mocks/: mock_generate_audio_files.py
tests/: conftest.py  test_performer.py
